wip: 字典重构临时提交